--- a/demo1.html
+++ b/demo1.html
@@ -8,8 +8,6 @@
 </head>
 <body>
   <div>
-    第一次学习git
-    修改文件1
     <div>
       <!-- 添加所有文件到暂存区 -->
       git add .
@@ -31,6 +29,16 @@
       git reset --hard 7d5e46
       <!-- 所有操作记录 -->
       git reflog
+      <!-- git checkout其实是用版本库里的版本替换工作区的版本，无论工作区是修改还是删除，都可以“一键还原”。 -->
+      git checkout -- test.txt
+      <!-- git rm 文件名,  git commit -m'删除文件' -->
+      删除文件，手动删除本地文件，并且使用git rm 文件名，并且git commit -m'删除文件'
+
+      场景1：当你改乱了工作区某个文件的内容，想直接丢弃工作区的修改时，用命令git checkout -- file。
+
+      场景2：当你不但改乱了工作区某个文件的内容，还添加到了暂存区时，想丢弃修改，分两步，第一步用命令git reset HEAD <file>，就回到了场景1，第二步按场景1操作。
+
+      场景3：已经提交了不合适的修改到版本库时，想要撤销本次提交，参考版本回退一节，不过前提是没有推送到远程库。
     </div>
   </div>
 </body>
