--- a/demo1.html
+++ b/demo1.html
@@ -39,8 +39,15 @@
       场景2：当你不但改乱了工作区某个文件的内容，还添加到了暂存区时，想丢弃修改，分两步，第一步用命令git reset HEAD <file>，就回到了场景1，第二步按场景1操作。
 
       场景3：已经提交了不合适的修改到版本库时，想要撤销本次提交，参考版本回退一节，不过前提是没有推送到远程库。
-      <!-- 创建切换分支 -->
-      git checkout -b <分支名称>
+      <!-- 创建切换分支dev -->
+      git checkout -b dev
+      git switch -b dev
+      <!-- 查看分支 -->
+      git branch
+      <!-- 合并dev分支 -->
+      git merge dev
+      <!-- 删除分支dev -->
+      git branch -d dev
     </div>
   </div>
 </body>
