--- a/demo1.html
+++ b/demo1.html
@@ -48,6 +48,8 @@
       git merge dev
       <!-- 删除分支dev -->
       git branch -d dev
+      <!-- 查看隐藏工作区 -->
+      git stash list
     </div>
   </div>
 </body>
