--- a/demo1.html
+++ b/demo1.html
@@ -48,6 +48,10 @@
       git merge dev
       <!-- 删除分支dev -->
       git branch -d dev
+      <!-- 隐藏工作区 -->
+      git stash
+      <!-- git log后退出 -->
+      按esc,然后shift+:,然后按Q
     </div>
   </div>
 </body>
